modifique html Cristian

--- a/pages/cristian.html
+++ b/pages/cristian.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rojas Cristian</title>
+    <title>Grupo 7</title>
 </head>
+<!-- Cuerpo ded pagina -->
 <body>
-    <p>Rojas Cristian</p>
+    <h1>Grupo N°7</h1>
+    <hr>
+    <header>
+        <div>
+            <h2><em>Bienvenidos</em></h2>
+        </div>
+        <div><p>HOLA ACA CONTENIDO</p></div>
+        <h2>Enlaces</h2>
+        <!-- Barra de Navegación -->
+        <nav>
+            <ul style="list-style-type:circle">
+                <li>
+                    <a href="./pages/cristian.html">Pagina de Cristian R.</a> 
+                </li>
+                <li>
+                    <a href="./pages/chabela.html">Pagina de Chabela G.</a>
+                </li>
+                <li>
+                    <a href="./pages/mauricio.html">Pagina de Mauricio P.</a>
+                </li>
+                <li>
+                    <a href="./pages/laura.html">Pagina de Laura B.</a> 
+                </li>
+            </ul>
+        </nav>
+        <!-- Cierre de Barra de Navegación -->
+    </header>    
 </body>
 </html>
