--- a/pages/cristian.html
+++ b/pages/cristian.html
@@ -10,6 +10,9 @@
     <h1>Grupo N°7</h1>
     <hr>
     <header>
+        <li>
+            <a href="/index.html">Pagina Principal</a> 
+        </li>
         <div>
             <h2><em>Bienvenidos</em></h2>
         </div>
