--- a/pages/cristian.html
+++ b/pages/cristian.html
@@ -10,9 +10,11 @@
     <h1>Grupo N°7</h1>
     <hr>
     <header>
-        <li>
-            <a href="/index.html">Pagina Principal</a> 
-        </li>
+        <ul style="list-style-type:circle"></ul>
+            <li>
+                <a href="/index.html">Pagina Principal</a> 
+            </li>
+        </ul>
         <div>
             <h2><em>Bienvenidos</em></h2>
         </div>
