--- a/pages/cristian.html
+++ b/pages/cristian.html
@@ -12,7 +12,7 @@
     <header>
         <ul style="list-style-type:circle"></ul>
             <li>
-                <a href="/index.html">Pagina Principal</a> 
+                <a href="../index.html">Pagina Principal</a> 
             </li>
         </ul>
         <div>
