--- a/pages/cristian.html
+++ b/pages/cristian.html
@@ -24,6 +24,9 @@
         <nav>
             <ul style="list-style-type:circle">
                 <li>
+                    <a href="../index.html">Volver al Inicio</a>
+                </li>
+                <li>
                     <a href="./pages/cristian.html">Pagina de Cristian R.</a> 
                 </li>
                 <li>
