--- a/pages/chabela.html
+++ b/pages/chabela.html
@@ -28,5 +28,22 @@
 <p>-Posee dos ángulos iguales y uno desigual. </p>
 <img src="./assets/isosceles.jpg" alt="Triangulo Isósceles"
 
+<h2>Enlaces</h2>
+        <!-- Barra de Navegación -->
+        <nav>
+            <ul style="list-style-type:circle">
+                
+                <li>
+                    <a href="./pages/chabela.html">Pagina de Chabela G.</a>
+                </li>
+                <li>
+                    <a href="./pages/mauricio.html">Pagina de Mauricio P.</a>
+                </li>
+                <li>
+                    <a href="./pages/laura.html">Pagina de Laura B.</a> 
+                </li>
+            </ul>
+        </nav>
+
 </body> 
 </html>
