--- a/pages/cristian.html
+++ b/pages/cristian.html
@@ -18,17 +18,20 @@
         <div>
             <h2><em>Bienvenidos</em></h2>
         </div>
-        <div><p>HOLA ACA CONTENIDO</p></div>
+        <div><p>Menu del Dia</p></div>
+        <div>
+            <ul>
+                <li>Pizza</li>
+                <li>Pastas</li>
+                <li>Empanadas</li>
+                <li>Pollo</li>
+            </ul>
+        </div>
         <h2>Enlaces</h2>
         <!-- Barra de Navegación -->
         <nav>
             <ul style="list-style-type:circle">
-                <li>
-                    <a href="../index.html">Volver al Inicio</a>
-                </li>
-                <li>
-                    <a href="./pages/cristian.html">Pagina de Cristian R.</a> 
-                </li>
+                
                 <li>
                     <a href="./pages/chabela.html">Pagina de Chabela G.</a>
                 </li>
