agregando html cris

--- a/pages/chabela.html
+++ b/pages/chabela.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plataforma educativa-Clasificación de triángulos</title> <!--Nombre del título-->
 </head>
-<body> 
+<body>
+        <ul style="list-style-type:circle"></ul>
+            <li>
+                <a href="../index.html">Pagina Principal</a> 
+            </li>
+        </ul> 
     <header>
         <h1> Clasificación de triángulos según sus lados </h1>
     </header>
