--- a/pages/cristian.html
+++ b/pages/cristian.html
@@ -22,9 +22,13 @@
         <div>
             <ul>
                 <li>Pizza</li>
+                <img src="./assets/pizza.jpg" alt="Pizza muy rica">
                 <li>Pastas</li>
+                <img src="./assets/pastas.jpeg" alt="Pastas con salsa">
                 <li>Empanadas</li>
+                <img src="./assets/empanadas.jpg" alt="Empanadas al horno">
                 <li>Pollo</li>
+                <img src="./assets/pollo.jpg" alt="Pollo al espiedo">
             </ul>
         </div>
         <h2>Enlaces</h2>
