--- a/pages/mauricio.html
+++ b/pages/mauricio.html
@@ -6,6 +6,13 @@
     <title>Mauricio</title>
 </head>
 <body>
+
+        <ul style="list-style-type:circle"></ul>
+            <li>
+                <a href="../index.html">Pagina Principal</a> 
+            </li>
+        </ul>
+
     <h1><b>Inteligencia Artificial</b></h1>
     <header>
         <nav>
@@ -34,5 +41,23 @@
     <font>
         <em>Mauricio Potschka</em>
     </font>
+
+    <h2>Enlaces</h2>
+        <!-- Barra de Navegación -->
+        <nav>
+            <ul style="list-style-type:circle">
+                
+                <li>
+                    <a href="./pages/chabela.html">Pagina de Chabela G.</a>
+                </li>
+                <li>
+                    <a href="./pages/mauricio.html">Pagina de Mauricio P.</a>
+                </li>
+                <li>
+                    <a href="./pages/laura.html">Pagina de Laura B.</a> 
+                </li>
+            </ul>
+        </nav>
+
 </body>
 </html>
