arreglando unas cositas chiquitititas

--- a/pages/chabela.html
+++ b/pages/chabela.html
@@ -39,7 +39,7 @@
             <ul style="list-style-type:circle">
                 
                 <li>
-                    <a href="./pages/chabela.html">Pagina de Chabela G.</a>
+                    <a href="./pages/cristian.html">Pagina de Cristian R.</a>
                 </li>
                 <li>
                     <a href="./pages/mauricio.html">Pagina de Mauricio P.</a>
