--- a/pages/mauricio.html
+++ b/pages/mauricio.html
@@ -51,7 +51,7 @@
                     <a href="./pages/chabela.html">Pagina de Chabela G.</a>
                 </li>
                 <li>
-                    <a href="./pages/mauricio.html">Pagina de Mauricio P.</a>
+                    <a href="./pages/cristian.html">Pagina de Cristian R.</a>
                 </li>
                 <li>
                     <a href="./pages/laura.html">Pagina de Laura B.</a> 
