modificacion final creo

--- a/pages/chabela.html
+++ b/pages/chabela.html
@@ -39,13 +39,13 @@
             <ul style="list-style-type:circle">
                 
                 <li>
-                    <a href="./pages/cristian.html">Pagina de Cristian R.</a>
+                    <a href="./cristian.html">Pagina de Cristian R.</a>
                 </li>
                 <li>
-                    <a href="./pages/mauricio.html">Pagina de Mauricio P.</a>
+                    <a href="./mauricio.html">Pagina de Mauricio P.</a>
                 </li>
                 <li>
-                    <a href="./pages/laura.html">Pagina de Laura B.</a> 
+                    <a href="./laura.html">Pagina de Laura B.</a> 
                 </li>
             </ul>
         </nav>
