--- a/pages/mauricio.html
+++ b/pages/mauricio.html
@@ -48,13 +48,13 @@
             <ul style="list-style-type:circle">
                 
                 <li>
-                    <a href="./pages/chabela.html">Pagina de Chabela G.</a>
+                    <a href="./chabela.html">Pagina de Chabela G.</a>
                 </li>
                 <li>
-                    <a href="./pages/cristian.html">Pagina de Cristian R.</a>
+                    <a href="./cristian.html">Pagina de Cristian R.</a>
                 </li>
                 <li>
-                    <a href="./pages/laura.html">Pagina de Laura B.</a> 
+                    <a href="./laura.html">Pagina de Laura B.</a> 
                 </li>
             </ul>
         </nav>
