--- a/pages/cristian.html
+++ b/pages/cristian.html
@@ -37,13 +37,13 @@
             <ul style="list-style-type:circle">
                 
                 <li>
-                    <a href="./pages/chabela.html">Pagina de Chabela G.</a>
+                    <a href="./chabela.html">Pagina de Chabela G.</a>
                 </li>
                 <li>
-                    <a href="./pages/mauricio.html">Pagina de Mauricio P.</a>
+                    <a href="./mauricio.html">Pagina de Mauricio P.</a>
                 </li>
                 <li>
-                    <a href="./pages/laura.html">Pagina de Laura B.</a> 
+                    <a href="./laura.html">Pagina de Laura B.</a> 
                 </li>
             </ul>
         </nav>
