--- a/pages/mauricio.html
+++ b/pages/mauricio.html
@@ -6,13 +6,6 @@
     <title>Mauricio</title>
 </head>
 <body>
-
-        <ul style="list-style-type:circle"></ul>
-            <li>
-                <a href="../index.html">Pagina Principal</a> 
-            </li>
-        </ul>
-
     <h1><b>Inteligencia Artificial</b></h1>
     <header>
         <nav>
@@ -26,22 +19,15 @@
         <p><strong>La inteligencia artificial</strong> (IA) es la combinación de algoritmos diseñados con el propósito <br> de crear máquinas que presenten las mismas capacidades que los seres humanos, <br> como el razonamiento, el aprendizaje, la creatividad y la capacidad de planificar . <br>
         <br> <!--br es para saltar linea-->
         <!--el hr es para colocar una linea -->
-        La <strong>IA</strong> permite que los sistemas tecnológicos perciban su entorno, se relacionen con él, <br> resuelvan problemas y actúen con un fines específicos. <br> Las máquinas reciben datos, los procesan y responden a ellos .</p>
-        
+        La <strong>IA</strong> permite que los sistemas tecnológicos perciban su entorno, se relacionen con él, <br> resuelvan problemas y actúen con un fines específicos. <br> Las máquinas reciben datos, los procesan y responden a ellos .</p>   
     </main>
     <img src="./assets/Artificial intelligence (AI).jpg" alt="ia">
     <hr>
     <article>
         <h2><b>Una de las principales desarrolladoras de la inteligencia artificial es OpenAI</b></h2>
         <p><strong>OpenAI</strong> es una organización de investigación en inteligencia artificial que ha desarrollado proyectos como <strong>ChatGPT</strong>, <br> un modelo de lenguaje generativo.</p>
-        <br>
-        <img src="./assets/ChatGPT_ ¡La última palabra en inteligencia artificial!.jpg" alt="">
-        <hr>
+        <img src="./assets/ChatGPT_ ¡La última palabra en inteligencia artificial!.jpg" alt="AI">
     </article>
-    <font>
-        <em>Mauricio Potschka</em>
-    </font>
-
     <h2>Enlaces</h2>
         <!-- Barra de Navegación -->
         <nav>
@@ -58,6 +44,9 @@
                 </li>
             </ul>
         </nav>
-
+        <hr>
+    <footer>
+        <em>Mauricio Potschka</em>
+    </footer>           
 </body>
 </html>
