--- a/pages/laura.html
+++ b/pages/laura.html
@@ -16,8 +16,25 @@
             </li>
         </ul>
         <div>
-            <h2><em>Bienvenidos</em></h2>
+            <h1><em>Nonna Alice</em></h1>
+            <h2>Desde 2019 haciendo parte de tus mates</h2>
+            <img src="../pages/assets/NONNA ALICE LOGO.jpg" alt="">
         </div>
+        <div>
+            <div><p>Las mejores chipitas que jamás vas a probar, con una excelente combinación entre sabor y calidad</p></div>
+        </div>
+        <div><p>Las podes encontrar en sus dos opciones</p></div>
+         <ul>
+            <li>Chipitas horneadas</li>
+            <img src="../pages/assets/Horneada 1.jpeg" alt="">
+            <img src="../pages/assets/Horneada 2.jpeg" alt="">
+
+            <li>Chipitas congeladas</li>
+            <img src="../pages/assets/Congelada 1.jpeg" alt="">
+            <img src="../pages/assets/Congelada 2.jpeg" alt="">
+         </ul>
+
+         <div><p>En honor a mi abuela: Alicia Pohl</p></div>
         
         <h2>Enlaces</h2>
         <!-- Barra de Navegación -->
